2007-08-22  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Adele.

        - rdar:5423067 Reapplying the change but only when the text area is in focus.

        * fast/forms/cursor-position-expected.txt:
        * fast/forms/cursor-position.html:

2007-08-22  Kevin McCullough  <kmccullough@apple.com>

        - Rolling back since I neeed to update some layouttests this change broke.

        * fast/forms/cursor-position-expected.txt:
        * fast/forms/cursor-position.html:

2007-08-21  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Geof, Adam, Hyatt, Maciej and Oliver.

        - In order to match the behavior of the other major browsers, selection is moved to the end of the text value when a change occurs to the contents of a text area instead of remembering the location of the selection.
        - <rdar://problem/5423067> gmail is super annoying when trying to add a new name to the TO, CC or BCC fields

        * fast/forms/cursor-position-expected.txt:
        * fast/forms/cursor-position.html:

2007-08-21  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Added a couple more failures.

2007-08-21  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Added some more failing tests.

2007-08-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15010
          <rdar://problem/5423956> REGRESSION (r25000-r25065): Table rendering broken by a recent nightly

        * fast/table/max-width-integer-overflow.html: Added.
        * platform/mac/fast/table: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.checksum: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.png: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.txt: Added.

2007-08-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.
