@@ -1,0 +1,22 @@
+<style>
+blockquote {
+    color: blue;
+    border-left: 2px solid blue;
+    padding-left: 5px;
+    margin: 0px;
+}
+</style>
+<p>This tests for a crash when attempting to break a blockquote at the end of its content.  The caret should be in the first of two empty paragraphs between two pieces of quoted content.</p>
+<div contenteditable="true">
+<blockquote type="cite"><table border="1"><tr><td id="td">foo</td></tr></table></blockquote>
+<br>
+<blockquote type="cite"><table border="1"><tr><td>bar</td></tr></table></blockquote>
+</div>
+
+<script>
+td = document.getElementById("td");
+text = td.firstChild;
+s = window.getSelection();
+s.setPosition(text, 3);
+document.execCommand("InsertNewlineInQuotedContent");
+</script>
